src/human_study/program_46/python_err_msg.txt
File "./seq2parse/human_study/program_46/original.py", line 4
    if b === a:
           ^
SyntaxError: invalid syntax
